# CppExamples

./: CMakeLists.txt
src/: main.cpp
src/patterns/: crtp.hpp  event.hpp  observer.hpp  pimpl.cpp  pimpl.hpp  singleton.hpp
src/threads/: async.hpp  async.md  atomics.hpp  atomics.md  basic_thread.hpp  coroutines.hpp  future_promise.hpp  future_promise.md  mutexes.hpp  thread_pool.hpp
